Post-Academy-Projects/Project-1-Implement-a-CI-CD-Pipeline/k8_files/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: project-1-sparta-app-svc
  namespace: default

spec:
  ports:
    - nodePort: 30001
      port: 80
      targetPort: 3000

  selector:
    app: project-1-sparta-app

  type: NodePort
