Post-Academy-Projects/Project-1-Implement-a-CI-CD-Pipeline/k8_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-1-sparta-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: your-app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-1-sparta-app-svc
            port:
              number: 80
